Iniciar sesión comprueba que sean los datos correctos

--- a/src/views/inicio.html
+++ b/src/views/inicio.html
@@ -31,6 +31,8 @@
                     <a href="./crearCuenta.html">
                         <button id="botonCrearCuenta"><h3>Crear cuenta</h3></button>
                     </a>
+                    <br><br>
+                    <button id="botonCerrar"><h3>Cerrar</h3></button>
                 </div>
             </div>
         </div>
