--- a/src/views/inicio.html
+++ b/src/views/inicio.html
@@ -23,7 +23,7 @@
                 <div class="datos">
                     <h4>Contraseña</h4>
                     <br><br><br>
-                    <input type="text" id="inputContrasena">
+                    <input type="password" id="inputContrasena">
                 </div>
                 <div class="ingresar">
                     <button id="botonIngresar"><h3>Ingresar</h3></button>
