Se añade la programacion a estadisticas

--- a/src/views/estadisticas.html
+++ b/src/views/estadisticas.html
@@ -7,6 +7,7 @@
     <title>Votaciones USTA</title>
     <link rel="stylesheet" href="../CSS/interfaz.css">
     <link rel="stylesheet" href="../CSS/estadisticas.css">
+    <script src="../JS/estadisticas.js" defer></script>
 </head>
 <body>
     <div class="fondo">
@@ -20,30 +21,30 @@
                 <div class="estadisticas">
                     <div class="division">
                         <div class="titulo">
-                            <h1>0</h1>
+                            <h1 id="jugadas">0</h1>
                         </div>
                         <br><br>
                         <h2>Jugadas</h2>
                     </div>
                     <div class="division2">
                         <div class="titulo">
-                            <h1>0%</h1>
+                            <h1 id="porcentaje">0%</h1>
                         </div>
                         <br><br>
                         <h2>Victorias</h2>
                     </div>
                 </div>
                 <div class="titulo">
-                    <h1>Distribucción</h1>
+                    <h1>Distribución</h1>
                 </div>
                 <div class="distribuccion">
-                    <h6>1: (0%)</h6>
-                    <h6>2: ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ (50%)</h6>
-                    <h6>3: ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ ⬛ (50%)</h6>
-                    <h6>4: (0%)</h6>
-                    <h6>5: (0%)</h6>
-                    <h6>6: (0%)</h6>
-                    <h6>X: (0%)</h6>
+                    <h6 id="1">1: (0%)</h6>
+                    <h6 id="2">2: (0%)</h6>
+                    <h6 id="3">3: (0%)</h6>
+                    <h6 id="4">4: (0%)</h6>
+                    <h6 id="5">5: (0%)</h6>
+                    <h6 id="6">6: (0%)</h6>
+                    <h6 id="7">X: (0%)</h6>
                 </div>
                 <div class="botones">
                     <a href="./juego.html">
