--- a/src/css/juego.css
+++ b/src/css/juego.css
@@ -1,6 +1,47 @@
 .logo{
     margin-top: -5%;
-    margin-left: 21%;
-    width: 40%;
-    height: 7.5%;
+    margin-left: 18%;
+    width: 50%;
+    height: 10%;
+}
+.container {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template: 55% auto / 1fr;
+    grid-template-areas:
+        "cuadricula cuadricula"
+        "teclado teclado";
+}
+
+.cuadricula {
+    
+    margin-left: 3%;
+    margin-right: 3%;
+    grid-area: cuadricula;
+    display: grid;
+    place-items: center;
+}
+
+.teclado {
+    background: yellow;
+    grid-area: teclado;
+}
+
+.intento {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.letra {
+    width: 16%;
+    height: 90%;
+    border: 3px solid green;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
 }
