--- a/src/views/juego.html
+++ b/src/views/juego.html
@@ -14,8 +14,58 @@
         <div class="formulario">
             <div class="logo"><img src="../img/wordle_banner.png"width="100%"height="100%" alt="WORDLE"></div>
             <div class="info">
-            </div>
+                <div class="container">
+                    <div class="cuadricula">
+                        <div class="intento">
+                            <div class="letra">a</div>
+                            <div class="letra">b</div>
+                            <div class="letra">c</div>
+                            <div class="letra">d</div>
+                            <div class="letra">e</div>
+                        </div>
+                        <div class="intento">
+                            <div class="letra">a</div>
+                            <div class="letra">b</div>
+                            <div class="letra">c</div>
+                            <div class="letra">d</div>
+                            <div class="letra">e</div>
+                        </div>
+                        <div class="intento">
+                            <div class="letra">a</div>
+                            <div class="letra">b</div>
+                            <div class="letra">c</div>
+                            <div class="letra">d</div>
+                            <div class="letra">e</div>
+                        </div>
+                        <div class="intento">
+                            <div class="letra">a</div>
+                            <div class="letra">b</div>
+                            <div class="letra">c</div>
+                            <div class="letra">d</div>
+                            <div class="letra">e</div>
+                        </div>
+                        <div class="intento">
+                            <div class="letra">a</div>
+                            <div class="letra">b</div>
+                            <div class="letra">c</div>
+                            <div class="letra">d</div>
+                            <div class="letra">e</div>
+                        </div>
+                        <div class="intento">
+                            <div class="letra">a</div>
+                            <div class="letra">b</div>
+                            <div class="letra">c</div>
+                            <div class="letra">d</div>
+                            <div class="letra">e</div>
+                        </div>
+                    </div>
+                    <div class="teclado">
+                        teclado
+                    </div>
+                </div>
+            </div>   
         </div>
+        
     </div>
 </body>
 </html>
