Se sigue trabajando en interfaz

--- a/src/views/juego.html
+++ b/src/views/juego.html
@@ -1,71 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Votaciones USTA</title>
+    <title>WORDLE</title>
     <link rel="stylesheet" href="../CSS/interfaz.css">
     <link rel="stylesheet" href="../CSS/juego.css">
 </head>
+
 <body>
     <div class="fondo">
-        <img src="../img/wallpaper.jpg"width="100%"height="100%" alt="WORDLE">
+        <img src="../img/wallpaper.jpg" width="100%" height="100%" alt="WORDLE">
         <div class="formulario">
-            <div class="logo"><img src="../img/wordle_banner.png"width="100%"height="100%" alt="WORDLE"></div>
+            <div class="logo"><img src="../img/wordle_banner.png" width="100%" height="100%" alt="WORDLE"></div>
             <div class="info">
                 <div class="container">
                     <div class="cuadricula">
                         <div class="intento">
-                            <div class="letra">a</div>
-                            <div class="letra">b</div>
-                            <div class="letra">c</div>
-                            <div class="letra">d</div>
-                            <div class="letra">e</div>
+                            <div class="letra"> </div>
+                            <div class="letra"> </div>
+                            <div class="letra"> </div>
+                            <div class="letra"> </div>
+                            <div class="letra"> </div>
                         </div>
                         <div class="intento">
-                            <div class="letra">a</div>
-                            <div class="letra">b</div>
-                            <div class="letra">c</div>
-                            <div class="letra">d</div>
-                            <div class="letra">e</div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
                         </div>
                         <div class="intento">
-                            <div class="letra">a</div>
-                            <div class="letra">b</div>
-                            <div class="letra">c</div>
-                            <div class="letra">d</div>
-                            <div class="letra">e</div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
                         </div>
                         <div class="intento">
-                            <div class="letra">a</div>
-                            <div class="letra">b</div>
-                            <div class="letra">c</div>
-                            <div class="letra">d</div>
-                            <div class="letra">e</div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
                         </div>
                         <div class="intento">
-                            <div class="letra">a</div>
-                            <div class="letra">b</div>
-                            <div class="letra">c</div>
-                            <div class="letra">d</div>
-                            <div class="letra">e</div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
                         </div>
                         <div class="intento">
-                            <div class="letra">a</div>
-                            <div class="letra">b</div>
-                            <div class="letra">c</div>
-                            <div class="letra">d</div>
-                            <div class="letra">e</div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
+                            <div class="letra"></div>
                         </div>
                     </div>
                     <div class="teclado">
-                        teclado
+                        <div class="intento">
+                            <button class="tecla">Q</button>
+                            <button class="tecla">W</button>
+                            <button class="tecla">E</button>
+                            <button class="tecla">R</button>
+                            <button class="tecla">T</button>
+                            <button class="tecla">Y</button>
+                            <button class="tecla">U</button>
+                            <button class="tecla">I</button>
+                            <button class="tecla">O</button>
+                            <button class="tecla">P</button>
+                        </div>
+                        <div class="intento">
+                            <button class="tecla">A</button>
+                            <button class="tecla">S</button>
+                            <button class="tecla">D</button>
+                            <button class="tecla">F</button>
+                            <button class="tecla">G</button>
+                            <button class="tecla">H</button>
+                            <button class="tecla">J</button>
+                            <button class="tecla">K</button>
+                            <button class="tecla">L</button>
+                            <button class="tecla">Ñ</button>
+                        </div>
+                        <div class="intento">
+                            <button class="tecla">Z</button>
+                            <button class="tecla">X</button>
+                            <button class="tecla">C</button>
+                            <button class="tecla">V</button>
+                            <button class="tecla">B</button>
+                            <button class="tecla">N</button>
+                            <button class="tecla">M</button>
+                            <button class="enter">ENTER</button>
+                        </div>
                     </div>
                 </div>
-            </div>   
+            </div>
         </div>
-        
+
     </div>
 </body>
+
 </html>
