--- a/src/css/juego.css
+++ b/src/css/juego.css
@@ -15,17 +15,19 @@
 }
 
 .cuadricula {
-    
-    margin-left: 3%;
-    margin-right: 3%;
+    margin-right: 10%;
+    margin-left: 10%;
     grid-area: cuadricula;
     display: grid;
     place-items: center;
 }
 
 .teclado {
-    background: yellow;
+    margin-right: 2%;
+    margin-left: 2%;
     grid-area: teclado;
+    display: grid;
+    place-items: center;
 }
 
 .intento {
@@ -44,4 +46,16 @@
     text-align: center;
     font-size: 25px;
     font-family: 'Times New Roman', Times, serif;
+}
+.tecla{
+    width: 8%;
+    height: 80%;
+    background: #D3D6DA;
+
+}
+.enter{
+    width: 25%;
+    height: 80%;
+    background: #D3D6DA;
+
 }
