--- a/src/views/crearCuenta.html
+++ b/src/views/crearCuenta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Votaciones USTA</title>
+    <title>WORDLE</title>
     <link rel="stylesheet" href="../CSS/interfaz.css">
     <link rel="stylesheet" href="../CSS/formulario.css">
     <script src="../JS/crearCuenta.js" defer></script>
