--- a/src/css/juego.css
+++ b/src/css/juego.css
@@ -5,26 +5,30 @@
     height: 10%;
 }
 .container {
+    margin-top: -10%;
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template: 55% auto / 1fr;
+    grid-template: 65% auto / 1fr;
     grid-template-areas:
         "cuadricula cuadricula"
         "teclado teclado";
 }
 
 .cuadricula {
-    margin-right: 10%;
-    margin-left: 10%;
+    margin-right: 18%;
+    margin-left: 18%;
+    margin-bottom: 10%;
     grid-area: cuadricula;
     display: grid;
     place-items: center;
 }
 
 .teclado {
-    margin-right: 2%;
-    margin-left: 2%;
+    margin-top: -13%;
+    margin-bottom: -5%;
+    margin-right: 7%;
+    margin-left: 7%;
     grid-area: teclado;
     display: grid;
     place-items: center;
@@ -41,21 +45,47 @@
 .letra {
     width: 16%;
     height: 90%;
-    border: 3px solid green;
-    border-radius: 10px;
+    border: 4px solid;
+    border-color: rgb(109, 169, 101);
+    border-radius: 5px;
     text-align: center;
+    margin-top: -20%;
     font-size: 25px;
     font-family: 'Times New Roman', Times, serif;
 }
+
+h1{
+    font-size: 30px;
+    align-items: center;
+    margin-top: 10%;
+}
+
+h2 {
+    font-size: 15px;
+}
+
 .tecla{
-    width: 8%;
+    border-color: transparent;
+    width: 9%;
     height: 80%;
     background: #D3D6DA;
 
 }
 .enter{
-    width: 25%;
+    border-color: transparent;
+    width: 18%;
     height: 80%;
     background: #D3D6DA;
 
+}
+
+.Volver {
+    margin-top: 10%;
+    margin-bottom: -10%;
+    margin-left: 38%;
+    margin-right: 38%;
+}
+
+.Volver button {
+    height: 50%;
 }
