--- a/src/views/juego.html
+++ b/src/views/juego.html
@@ -8,6 +8,7 @@
     <title>WORDLE</title>
     <link rel="stylesheet" href="../CSS/interfaz.css">
     <link rel="stylesheet" href="../CSS/juego.css">
+    <script src="../JS/juego.js" defer></script>
 </head>
 
 <body>
@@ -19,83 +20,89 @@
                 <div class="container">
                     <div class="cuadricula">
                         <div class="intento">
-                            <div class="letra"> </div>
-                            <div class="letra"> </div>
-                            <div class="letra"> </div>
-                            <div class="letra"> </div>
-                            <div class="letra"> </div>
+                            <div class="letra" id="1-1"><h1></h1></div>
+                            <div class="letra"  id="1-2"><h1></h1> </div>
+                            <div class="letra"  id="1-3"><h1></h1> </div>
+                            <div class="letra"  id="1-4"><h1></h1> </div>
+                            <div class="letra"  id="1-5"><h1></h1> </div>
                         </div>
                         <div class="intento">
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
+                            <div class="letra"  id="2-1"><h1></h1></div>
+                            <div class="letra"  id="2-2"><h1></h1></div>
+                            <div class="letra"  id="2-3"><h1></h1></div>
+                            <div class="letra"  id="2-4"><h1></h1></div>
+                            <div class="letra"  id="2-5"><h1></h1></div>
                         </div>
                         <div class="intento">
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
+                            <div class="letra" id="3-1"><h1></h1></div>
+                            <div class="letra" id="3-2"><h1></h1></div>
+                            <div class="letra" id="3-3"><h1></h1></div>
+                            <div class="letra" id="3-4"><h1></h1></div>
+                            <div class="letra" id="3-5"><h1></h1></div>
                         </div>
                         <div class="intento">
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
+                            <div class="letra" id="4-1"><h1></h1></div>
+                            <div class="letra" id="4-2"><h1></h1></div>
+                            <div class="letra" id="4-3"><h1></h1></div>
+                            <div class="letra" id="4-4"><h1></h1></div>
+                            <div class="letra" id="4-5"><h1></h1></div>
                         </div>
                         <div class="intento">
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
+                            <div class="letra" id="5-1"><h1></h1></div>
+                            <div class="letra" id="5-2"><h1></h1></div>
+                            <div class="letra" id="5-3"><h1></h1></div>
+                            <div class="letra" id="5-4"><h1></h1></div>
+                            <div class="letra" id="5-5"><h1></h1></div>
                         </div>
                         <div class="intento">
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
-                            <div class="letra"></div>
+                            <div class="letra" id="6-1"><h1></h1></div>
+                            <div class="letra" id="6-2"><h1></h1></div>
+                            <div class="letra" id="6-3"><h1></h1></div>
+                            <div class="letra" id="6-4"><h1></h1></div>
+                            <div class="letra" id="6-5"><h1></h1></div>
                         </div>
                     </div>
-                    <div class="teclado">
+                    <div class="teclado" id="teclado2">
                         <div class="intento">
-                            <button class="tecla">Q</button>
-                            <button class="tecla">W</button>
-                            <button class="tecla">E</button>
-                            <button class="tecla">R</button>
-                            <button class="tecla">T</button>
-                            <button class="tecla">Y</button>
-                            <button class="tecla">U</button>
-                            <button class="tecla">I</button>
-                            <button class="tecla">O</button>
-                            <button class="tecla">P</button>
+                            <button class="tecla" id="Q"><h2>Q</button>
+                            <button class="tecla" id="W"><h2>W</h2></button>
+                            <button class="tecla" id="E"><h2>E</h2></button>
+                            <button class="tecla" id="R"><h2>R</h2></button>
+                            <button class="tecla" id="T"><h2>T</h2></button>
+                            <button class="tecla" id="Y"><h2>Y</h2></button>
+                            <button class="tecla" id="U"><h2>U</h2></button>
+                            <button class="tecla" id="I"><h2>I</h2></button>
+                            <button class="tecla" id="O"><h2>O</h2></button>
+                            <button class="tecla" id="P"><h2>P</h2></button>
                         </div>
                         <div class="intento">
-                            <button class="tecla">A</button>
-                            <button class="tecla">S</button>
-                            <button class="tecla">D</button>
-                            <button class="tecla">F</button>
-                            <button class="tecla">G</button>
-                            <button class="tecla">H</button>
-                            <button class="tecla">J</button>
-                            <button class="tecla">K</button>
-                            <button class="tecla">L</button>
-                            <button class="tecla">Ñ</button>
+                            <button class="tecla" id="A"><h2>A</h2></button>
+                            <button class="tecla" id="S"><h2>S</h2></button>
+                            <button class="tecla" id="D"><h2>D</h2></button>
+                            <button class="tecla" id="F"><h2>F</h2></button>
+                            <button class="tecla" id="G"><h2>G</h2></button>
+                            <button class="tecla" id="H"><h2>H</h2></button>
+                            <button class="tecla" id="J"><h2>J</h2></button>
+                            <button class="tecla" id="K"><h2>K</h2></button>
+                            <button class="tecla" id="L"><h2>L</h2></button>
+                            <button class="tecla" id="Ñ"><h2>Ñ</h2></button>
                         </div>
                         <div class="intento">
-                            <button class="tecla">Z</button>
-                            <button class="tecla">X</button>
-                            <button class="tecla">C</button>
-                            <button class="tecla">V</button>
-                            <button class="tecla">B</button>
-                            <button class="tecla">N</button>
-                            <button class="tecla">M</button>
-                            <button class="enter">ENTER</button>
+                            <button class="enter" id ="Enter"><h2>Enter</h2></button>
+                            <button class="tecla" id ="Z"><h2>Z</h2></button>
+                            <button class="tecla" id ="X"><h2>X</h2></button>
+                            <button class="tecla" id ="C"><h2>C</h2></button>
+                            <button class="tecla" id ="V"><h2>V</h2></button>
+                            <button class="tecla" id ="B"><h2>B</h2></button>
+                            <button class="tecla" id ="N"><h2>N</h2></button>
+                            <button class="tecla" id ="M"><h2>M</h2></button>
+                            <button class="tecla" id ="borrar"><h2>⌫</h2></button>
                         </div>
+                    </div>
+                    <div class="Volver">
+                        <a href="./menu.html">
+                            <button><h3>Volver</h3></button>
+                        </a>
                     </div>
                 </div>
             </div>
