--- a/src/views/juego.html
+++ b/src/views/juego.html
@@ -20,7 +20,7 @@
                 <div class="container">
                     <div class="cuadricula">
                         <div class="intento">
-                            <div class="letra" id="1-1"><h1></h1></div>
+                            <div class="letra"  id="1-1"><h1></h1></div>
                             <div class="letra"  id="1-2"><h1></h1> </div>
                             <div class="letra"  id="1-3"><h1></h1> </div>
                             <div class="letra"  id="1-4"><h1></h1> </div>
@@ -62,41 +62,41 @@
                             <div class="letra" id="6-5"><h1></h1></div>
                         </div>
                     </div>
-                    <div class="teclado" id="teclado2">
+                    <div class="teclado" id="teclado">
                         <div class="intento">
-                            <button class="tecla" id="Q"><h2>Q</button>
-                            <button class="tecla" id="W"><h2>W</h2></button>
-                            <button class="tecla" id="E"><h2>E</h2></button>
-                            <button class="tecla" id="R"><h2>R</h2></button>
-                            <button class="tecla" id="T"><h2>T</h2></button>
-                            <button class="tecla" id="Y"><h2>Y</h2></button>
-                            <button class="tecla" id="U"><h2>U</h2></button>
-                            <button class="tecla" id="I"><h2>I</h2></button>
-                            <button class="tecla" id="O"><h2>O</h2></button>
-                            <button class="tecla" id="P"><h2>P</h2></button>
+                            <button class="tecla" id="Q">Q</button>
+                            <button class="tecla" id="W">W</button>
+                            <button class="tecla" id="E">E</button>
+                            <button class="tecla" id="R">R</button>
+                            <button class="tecla" id="T">T</button>
+                            <button class="tecla" id="Y">Y</button>
+                            <button class="tecla" id="U">U</button>
+                            <button class="tecla" id="I">I</button>
+                            <button class="tecla" id="O">O</button>
+                            <button class="tecla" id="P">P</button>
                         </div>
                         <div class="intento">
-                            <button class="tecla" id="A"><h2>A</h2></button>
-                            <button class="tecla" id="S"><h2>S</h2></button>
-                            <button class="tecla" id="D"><h2>D</h2></button>
-                            <button class="tecla" id="F"><h2>F</h2></button>
-                            <button class="tecla" id="G"><h2>G</h2></button>
-                            <button class="tecla" id="H"><h2>H</h2></button>
-                            <button class="tecla" id="J"><h2>J</h2></button>
-                            <button class="tecla" id="K"><h2>K</h2></button>
-                            <button class="tecla" id="L"><h2>L</h2></button>
-                            <button class="tecla" id="Ñ"><h2>Ñ</h2></button>
+                            <button class="tecla" id="A">A</button>
+                            <button class="tecla" id="S">S</button>
+                            <button class="tecla" id="D">D</button>
+                            <button class="tecla" id="F">F</button>
+                            <button class="tecla" id="G">G</button>
+                            <button class="tecla" id="H">H</button>
+                            <button class="tecla" id="J">J</button>
+                            <button class="tecla" id="K">K</button>
+                            <button class="tecla" id="L">L</button>
+                            <button class="tecla" id="Ñ">Ñ</button>
                         </div>
                         <div class="intento">
-                            <button class="enter" id ="Enter"><h2>Enter</h2></button>
-                            <button class="tecla" id ="Z"><h2>Z</h2></button>
-                            <button class="tecla" id ="X"><h2>X</h2></button>
-                            <button class="tecla" id ="C"><h2>C</h2></button>
-                            <button class="tecla" id ="V"><h2>V</h2></button>
-                            <button class="tecla" id ="B"><h2>B</h2></button>
-                            <button class="tecla" id ="N"><h2>N</h2></button>
-                            <button class="tecla" id ="M"><h2>M</h2></button>
-                            <button class="tecla" id ="borrar"><h2>⌫</h2></button>
+                            <button class="enter" id ="enter">Enter</button>
+                            <button class="tecla" id ="Z">Z</button>
+                            <button class="tecla" id ="X">X</button>
+                            <button class="tecla" id ="C">C</button>
+                            <button class="tecla" id ="V">V</button>
+                            <button class="tecla" id ="B">B</button>
+                            <button class="tecla" id ="N">N</button>
+                            <button class="tecla" id ="M">M</button>
+                            <button class="tecla" id ="borrar">⌫</button>
                         </div>
                     </div>
                     <div class="Volver">
