--- a/src/css/juego.css
+++ b/src/css/juego.css
@@ -76,7 +76,7 @@ h2 {
     border-color: transparent;
     width: 18%;
     height: 80%;
-    background: #D3D6DA;
+    background: rgb(109, 169, 101);
     font-size: 18px;
     font-weight: 700;
 }
@@ -90,4 +90,10 @@ h2 {
 
 .Volver button {
     height: 50%;
+    background: #D3D6DA;
+    border-color: #D3D6DA;
+}
+
+.Volver h3 {
+    color: black;
 }
