--- a/src/css/estadisticas.css
+++ b/src/css/estadisticas.css
@@ -67,15 +67,21 @@ input{
 
 .ingresar{
     position: absolute;
-    top:55%;
+    top:85%;
     left: 37%;
     height: 9.5%;
     width: 25%;
 }
 
-button{
+.botones{
     margin-left: 30%;
+    margin-top: 10%;
     width: 40%;
     height: 40px;
-    margin-top: 5%;
+    display:flow-root;
+    justify-content: space-between;
+}
+button{
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
